charts/cloud-controller/policies/ecs/validate-ecs-container-insights-enabled.yaml
apiVersion: nirmata.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-ecs-container-insights-enabled
  annotations:
    policies.kyverno.io/title: Validate ECS Container Insights are Enabled
    policies.kyverno.io/category: ECS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Container Insights enhances the operational visibility of ECS clusters, allowing for proactive issue resolution. 
      Enabling this feature ensures that diagnostic information is readily available, contributing to a more efficient and reliable containerized environment.
  labels:
    app: cloud-control-point
spec:
  failureAction: Audit
  scan: true
  rules:
    - name: validate-ecs-container-insights-enabled
      identifier: payload.clusterName
      match:
        all:
        - (metadata.provider): AWS
        - (metadata.service): ECS
        - (metadata.resource): Cluster
      assert:
        all:
        - message: >- 
            ECS container insights must be enabled
          check:
            payload:
              ~.(clusterSettings[?name == 'containerInsights'] || settings[?name == 'containerInsights']):
                value: enabled
