charts/cloud-controller/policies/ecs/validate-ecs-containers-nonprivileged.yaml
apiVersion: nirmata.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-ecs-containers-nonprivileged
  annotations:
    policies.kyverno.io/title: Validate ECS Containers Are Set to Non-Privileged
    policies.kyverno.io/category: ECS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      When privileged is set to true, the container is given elevated permissions on the host container instance (similar to the root user). 
      This policy checks that the privileged parameter in the container definition is set to false.
  labels:
    app: cloud-control-point
spec:
  failureAction: Audit
  scan: true
  rules:
    - name: validate-ecs-containers-nonprivileged
      identifier: payload.family
      match:
        all:
        - (metadata.provider): AWS
        - (metadata.service): ECS
        - (metadata.resource): TaskDefinition
      assert:
        all:
        - message: >- 
            The `privileged` field, if present, should be set to `false`
          check:
            payload:
              ~.(containerDefinitions):
                  (!!privileged): false
