charts/cloud-controller/policies/ecs/validate-ecs-containers-readonly.yaml
apiVersion: nirmata.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-ecs-containers-readonly
  annotations:
    policies.kyverno.io/title: Validate if ECS Containers only have read-only access to its root filesystem
    policies.kyverno.io/category: ECS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      When managing containers within AWS ECS, it's crucial to enforce security measures to prevent unauthorized modifications. 
      One significant aspect is restricting write access to the containers' root filesystem.
      This policy checks if ECS Containers have read-only access to its root filesystem.
  labels:
    app: cloud-control-point
spec:
  failureAction: Audit
  scan: true
  rules:
    - name: validate-ecs-containers-readonly
      identifier: payload.family
      match:
        all:
        - (metadata.provider): AWS
        - (metadata.service): ECS
        - (metadata.resource): TaskDefinition
      assert:
        all:
        - message: >- 
            ECS Containers should have read-only access to its root filesystem
          check:
            payload:
              ~.(containerDefinitions):
                  readonlyRootFilesystem: true
