charts/cloud-controller/policies/ecs/validate-efs-volume-encryption.yaml
apiVersion: nirmata.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-efs-volume-encryption
  annotations:
    policies.kyverno.io/title: Validate EFS Volume Encryption
    policies.kyverno.io/category: ECS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
     Amazon EFS file systems can be used with Amazon ECS to export file system data across your fleet of container instances. 
     To ensure encryption is enabled in transit, this policy validates whether `transitEncryption` is set to ENABLED in the task definition.
  labels:
    app: cloud-control-point
spec:
  failureAction: Audit
  scan: true
  rules:
    - name: validate-efs-volume-encryption
      identifier: payload.family
      match:
        all:
        - (metadata.provider): AWS
        - (metadata.service): ECS
        - (metadata.resource): TaskDefinition
      assert:
        all:
        - message: >- 
            Transit Encryption should be set to ENABLED for EFS volumes in ECS Task Definitions
          check:
            payload:
              ~.(volumes[?eFSVolumeConfiguration || efsVolumeConfiguration]):
                    (eFSVolumeConfiguration || efsVolumeConfiguration):
                        transitEncryption: ENABLED
